# keepalive

./: .gitignore  CHANGELOG.md  Makefile  README.md  ROADMAP.md  keepalive.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
Formula/: keepalive-cli.rb  keepalive-ui.rb  keepalive.rb
gui/: app.py  settings_window.py
src/gui/: __main__.py  app.py  settings_window.py
src/gui/assets/: AppIcon.icns
src/keepalive/: __init__.py  cli.py  config.py
tests/: test_cli.py  test_settings_file.py
