[project]
name = "keepalive"
version = "0.5.0"
description = "Keep macOS active for messaging apps"
requires-python = ">=3.14,<3.16"
dependencies = [
    "pyobjc-framework-Quartz>=12.0",
    "rumps>=0.4.0",
]

[tool.pdm.dev-dependencies]
test = ["pytest>=8.0"]
build = ["pyinstaller>=6.0"]

[project.scripts]
keepalive = "keepalive.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "file", path = "src/keepalive/__init__.py" }
