[project]
name = "keepalive"
version = "0.5.3"
description = "Keep macOS active for messaging apps"
requires-python = ">=3.14,<3.16"
dependencies = [
    "pyobjc-framework-Quartz>=12.0; sys_platform == \"darwin\"",
    "rumps>=0.4.0; sys_platform == \"darwin\"",
]


[tool.pdm]
version = { source = "file", path = "src/keepalive/__init__.py" }

[project.scripts]
keepalive = "keepalive.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pyinstaller>=6.0; sys_platform == \"darwin\"",
]
